unpackaged/main/default/objects/SIAM_stock__c/SIAM_stock__c.object-meta.xml
<CustomObject>
    <description>Este objeto permite tener un historial de existencias reportadas por el sistema SIAM</description>
    <label>SIAM_stock</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Nombre de SIAM_stock</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIAM_stocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>