unpackaged/main/default/objects/SIAM_stock__c/fields/Existencias_apartadas__c.field-meta.xml
<CustomField>
    <fullName>Existencias_apartadas__c</fullName>
    <description>Cantidad de existencias no disponibles apartadas en la unidad medica</description>
    <inlineHelpText>Cantidad de existencias no disponibles apartadas en la unidad medica</inlineHelpText>
    <label>Existencias apartadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>