unpackaged/main/default/objects/SIAM_stock__c/fields/existencias_disponibles__c.field-meta.xml
<CustomField>
    <fullName>existencias_disponibles__c</fullName>
    <description>Cantidad en existencias disponibles</description>
    <label>Existencias disponibles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>