unpackaged/main/default/objects/SIAM_stock__c/fields/Existencias_totales__c.field-meta.xml
<CustomField>
    <fullName>Existencias_totales__c</fullName>
    <description>El numero total de existencias de la clave registradas en la UMU</description>
    <label>Existencias totales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>