unpackaged/main/default/objects/SIAM_stock__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <description>Fecha de Extracción de SIAM</description>
    <inlineHelpText>Fecha de Extracción de SIAM</inlineHelpText>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>