unpackaged/main/default/objects/SIAM_stock__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clave</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SIAM_stocks</relationshipLabel>
    <relationshipName>SIAM_stocks</relationshipName>
    <type>Lookup</type>
</CustomField>