unpackaged/main/default/objects/SIAM_stock__c/fields/UMU_account__c.field-meta.xml
<CustomField>
    <fullName>UMU_account__c</fullName>
    <description>Esta relación, representa la unidad medica a la que pertenece las existencias</description>
    <inlineHelpText>La unidad medica en la que esta el registro</inlineHelpText>
    <label>UMU</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SIAM_stocks</relationshipLabel>
    <relationshipName>SIAM_stocks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>